// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Accordion Addon Append 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="accordion"
  >
    <div
      className="container"
      onClick={[Function]}
    >
      <div
        className="icon color-inverted size-sm background-muted"
        style={
          Object {
            "height": 25,
            "width": 25,
          }
        }
      >
        <svg
          height={25}
          viewBox="0 0 15 9"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="spacer horizontal"
        style={
          Object {
            "height": "100%",
            "maxHeight": "auto",
            "width": 15,
          }
        }
      />
      <div
        className="paragraph color-base size-md weight-medium"
      >
        Em Sméagol body.
      </div>
      But ill-tempered Thengel.
    </div>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": 5,
        }
      }
    />
    <div
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Accordion Addon Prepend 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="accordion"
  >
    <div
      className="container"
      onClick={[Function]}
    >
      <div
        className="icon color-inverted size-sm background-muted"
        style={
          Object {
            "height": 25,
            "width": 25,
          }
        }
      >
        <svg
          height={25}
          viewBox="0 0 15 9"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="spacer horizontal"
        style={
          Object {
            "height": "100%",
            "maxHeight": "auto",
            "width": 15,
          }
        }
      />
      Dare Erebor forgive most.
      <div
        className="paragraph color-base size-md weight-medium"
      >
        Em Sméagol body.
      </div>
    </div>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": 5,
        }
      }
    />
    <div
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Accordion Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="accordion"
  >
    <div
      className="container"
      onClick={[Function]}
    >
      <div
        className="icon color-inverted size-sm background-muted"
        style={
          Object {
            "height": 25,
            "width": 25,
          }
        }
      >
        <svg
          height={25}
          viewBox="0 0 15 9"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="spacer horizontal"
        style={
          Object {
            "height": "100%",
            "maxHeight": "auto",
            "width": 15,
          }
        }
      />
      <div
        className="paragraph color-base size-md weight-medium"
      >
        Em Sméagol body.
      </div>
    </div>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": 5,
        }
      }
    />
    <div
      className="divider"
    />
  </div>
</div>
`;
